[tool.poetry]
name = "WebHelpers2"
version = "2.1"
description = "WebHelpers2 is the successor to the widely-used WebHelpers utilities. It contains convenience functions to make HTML tags, process text, format numbers, do basic statistics, work with collections, and more."
authors = ["Mike Orr <sluggoster@gmail.com>", "Ben Bangert <ben@groovie.org>", "Phil Jenvey <pjenvey@groovie.org>"]
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/mikeorr/WebHelpers2"
homepage = "https://github.com/mikeorr/WebHelpers2"
documentation = "https://github.com/mikeorr/WebHelpers2"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Pylons",
    "Framework :: Pyramid",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "WebHelpers2/**/*.py",
    "CHANGELOG",
    "LICENSE",
    "README.md",
]

[tool.poetry.urls]
"Documentation" = "https://webhelpers2.readthedocs.org/en/latest/"
"Bug Tracker" = "https://github.com/mikeorr/WebHelpers2/issues"
"Change Log" = "https://github.com/mikeorr/WebHelpers2/blob/main/CHANGES.md"

[tool.poetry.dependencies]
python = ">=3.7"

# Pip requirements to build WebHelpers documentation and run tests.
MarkupSafe = ">=0.9.2"
six = ">=1.4.0"

# Optional enhancement for certain helpers
Unidecode = "*"

[tool.poetry.dev-dependencies]
# Test runner
pytest = "*"
tox = "*"
# Making wheel distributions
wheel = "*"
# Required for generating HTML documentation
Sphinx = "*"
pylons-sphinx-themes = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
